--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,9 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.03.18\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -23,12 +38,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n116\", 5555)"
+    "ak.connect(\"n21\", 5555)"
    ]
   },
   {
@@ -37,12 +60,12 @@
    "metadata": {},
    "source": [
     "### **Graph Generation and Loading**\n",
-    "Graphs can be built from existing data or generated with our suite of random graph generators. The preferred way to load a graph into memory is from Arkouda arrays, however we provide a method to read a graph in from matrix market format, or to generate them from existing Arkouda data."
+    "Graphs can be built from existing data or generated with our suite of random graph generators. The preferred way to load a graph into memory is from Arkouda arrays, however we provide a method to read a graph in from matrix market format or randomly generate some graphs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4b6a0f2f",
    "metadata": {},
    "outputs": [],
@@ -54,34 +77,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b625a57b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated graph has 17060912 vertices and 523606315 edges\n",
+      "Generated graph has 10000 vertices and 26381136 edges\n",
+      "Generated graph has 10000 vertices and 10000 edges\n",
+      "Generated graph has 10000 vertices and 249439 edges\n"
+     ]
+    }
+   ],
    "source": [
-    "# Generate a random RMAT graph.\n",
-    "random_graph = ar.rmat(20, create_using=ar.Graph)"
+    "# Generate a random graph using any variety of random generators available.\n",
+    "n = 10_000\n",
+    "rmat_graph = ar.rmat(25, create_using=ar.Graph)\n",
+    "gnp_graph = ar.gnp(n, 0.75, create_using=ar.Graph)\n",
+    "rtree_graph = ar.random_tree(n, create_using=ar.Graph)\n",
+    "ws_graph = ar.watts_strogatz_graph(n, 25, 0.56, create_using=ar.Graph)\n",
+    "graph_list = [rmat_graph, gnp_graph, rtree_graph, ws_graph]\n",
+    "for g in graph_list:\n",
+    "    print(f\"Generated graph has {len(g)} vertices and {g.size()} edges\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "78d1993d",
+   "execution_count": 5,
+   "id": "47d13bbc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1_000\n",
-    "m = 1_000_000\n",
-    "k = 2"
+    "# Create a property graph from Arkouda dataframes, usually read in from HDF5, Parquet, or CSV files. For demonstrative purposes, we create some random dataset here.\n",
+    "n = 1_000           # Number of vertices.\n",
+    "m = 1_000_000       # Number of edges.\n",
+    "k = 2               # Value to cap the randomness at."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5d0712b5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create variously different random arrays of different types: integers, unsigned integers, floats, booleans, strings, and categoricals.\n",
     "src_array = ak.randint(0, n, m, dtype=ak.dtype('int64'), seed=2)\n",
     "dst_array = ak.randint(0, n, m, dtype=ak.dtype('int64'), seed=4)\n",
     "int_array = ak.randint(-1, k, m, dtype=ak.dtype('int64'), seed=6)\n",
@@ -94,21 +137,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9c9b38b7",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialize an empty graph object.\n",
     "prop_graph = ar.PropGraph()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "af0f2c50",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a dataframe with the edge data.\n",
     "test_edge_dict = {\n",
     "    \"src\":src_array,\n",
     "    \"dst\":dst_array,\n",
@@ -124,72 +169,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ca0bbe6e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load in the edge attributes, with sorts the edges and handles storing their data.\n",
     "prop_graph.load_edge_attributes(test_edge_df, source_column=\"src\", destination_column=\"dst\", relationship_columns=[\"data5\", \"data1\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b8d7246",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prop_graph.get_edge_attributes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6c3ae3b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prop_graph.get_edge_relationships()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2703260",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(prop_graph.edge_attributes[\"data5\"]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84834dbe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# prop_graph.add_edges_from(src_array,dst_array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e94bf24e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create sizes for vertex information.\n",
     "m = len(prop_graph)\n",
     "k = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5dc37703",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create data of different types for vertices.\n",
     "int_array = ak.randint(-1, k, m, dtype=ak.dtype('int64'), seed=6)\n",
     "uint_array = ak.randint(0, k, m, dtype=ak.dtype('uint64'), seed=8)\n",
     "real_array = ak.randint(0, k, m, dtype=ak.dtype('float64'), seed=10)\n",
@@ -200,11 +208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d849d4ce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a dataframe with vertex data.\n",
     "test_node_dict = {\n",
     "    \"nodes\":prop_graph.nodes(),\n",
     "    \"data1\":int_array,\n",
@@ -219,114 +228,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "56581839",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Load in the vertex data.\n",
     "prop_graph.load_node_attributes(test_node_df, node_column=\"nodes\", label_columns=[\"data5\", \"data2\"])"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acdeada4",
+   "cell_type": "markdown",
+   "id": "61f19115",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "prop_graph.get_node_attributes()"
+    "### **Graph Processing and Querying**\n",
+    "Treating the graphs as dataframes allows us to exploit Arkouda's array searches to generate subgraphs in seconds."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b193b125",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prop_graph.get_node_labels()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "2343803e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create filters for vertices.\n",
     "def node_filter(node_attributes):\n",
     "    return node_attributes[\"data2\"] == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "94b1b23a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create filters for edges.\n",
     "def edge_filter(edge_attributes):\n",
     "    return edge_attributes[\"data1\"] > -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "ce31b434",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Subgraph generated with edge size: 467134\n",
+      "Subgraph generated with edge size: 420930\n",
+      "Subgraph generated with edge size: 100891\n"
+     ]
+    }
+   ],
    "source": [
-    "subgraph_nodes = prop_graph.subgraph_view(filter_node=node_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2461eb43",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subgraph_edges = prop_graph.subgraph_view(filter_edge=edge_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3623966a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "subgraph_together = prop_graph.subgraph_view(filter_node=node_filter, filter_edge=edge_filter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a8f70ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Subgraph generated with edge size: {subgraph_nodes.size()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a608027",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Subgraph generated with edge size: {subgraph_edges.size()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ecc5c635",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create different subgraphs from each demo and together.\n",
+    "subgraph_nodes = prop_graph.subgraph_view(filter_node=node_filter)\n",
+    "print(f\"Subgraph generated with edge size: {subgraph_nodes.size()}\")\n",
+    "subgraph_edges = prop_graph.subgraph_view(filter_edge=edge_filter)\n",
+    "print(f\"Subgraph generated with edge size: {subgraph_edges.size()}\")\n",
+    "subgraph_together = prop_graph.subgraph_view(filter_node=node_filter, filter_edge=edge_filter)\n",
     "print(f\"Subgraph generated with edge size: {subgraph_together.size()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec73ccc4",
+   "metadata": {},
+   "source": [
+    "### **Graph Algorithms**\n",
+    "Let's run some graph algorithms and see how we can use the returned information to draw a full picture of our datasets from above."
    ]
   }
  ],
