arkouda v2024.06.21 and chapel 2.1.0 compatibility

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,24 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.04.19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -40,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +38,7 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n116\", 5555)"
+    "ak.connect(\"n85\", 5555)"
    ]
   },
   {
@@ -67,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "4b6a0f2f",
    "metadata": {},
    "outputs": [],
@@ -79,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "b625a57b",
    "metadata": {},
    "outputs": [
@@ -87,10 +72,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated graph has 24212 vertices and 441463 edges\n",
-      "Generated graph has 100 vertices and 2640 edges\n",
+      "Generated graph has 24273 vertices and 442026 edges\n",
+      "Generated graph has 100 vertices and 2636 edges\n",
       "Generated graph has 100 vertices and 100 edges\n",
-      "Generated graph has 100 vertices and 2018 edges\n"
+      "Generated graph has 100 vertices and 2000 edges\n"
      ]
     }
    ],
@@ -108,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "47d13bbc",
    "metadata": {},
    "outputs": [],
@@ -121,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "5d0712b5",
    "metadata": {},
    "outputs": [],
@@ -139,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "9c9b38b7",
    "metadata": {},
    "outputs": [],
@@ -150,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "af0f2c50",
    "metadata": {},
    "outputs": [],
@@ -171,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "0adda3be",
    "metadata": {},
    "outputs": [
@@ -347,7 +332,7 @@
        "999999  465  523      0      1  0.014557   True             (1000000 rows x 8 columns)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "ca0bbe6e",
    "metadata": {},
    "outputs": [],
@@ -369,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "e94bf24e",
    "metadata": {},
    "outputs": [],
@@ -381,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "5dc37703",
    "metadata": {},
    "outputs": [],
@@ -397,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "d849d4ce",
    "metadata": {},
    "outputs": [],
@@ -417,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "52c54e83",
    "metadata": {},
    "outputs": [
@@ -581,7 +566,7 @@
        "999    999     -1      0  1.904719   True             (1000 rows x 7 columns)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "56581839",
    "metadata": {},
    "outputs": [],
@@ -612,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "2343803e",
    "metadata": {},
    "outputs": [],
@@ -624,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "94b1b23a",
    "metadata": {},
    "outputs": [],
@@ -636,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "ce31b434",
    "metadata": {},
    "outputs": [
@@ -671,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "61aa774c",
    "metadata": {},
    "outputs": [],
@@ -691,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "7378b0cc",
    "metadata": {},
    "outputs": [
@@ -720,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "21ef43f7",
    "metadata": {},
    "outputs": [
@@ -754,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "07067f46",
    "metadata": {},
    "outputs": [
@@ -781,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "c33d3fac",
    "metadata": {},
    "outputs": [
@@ -811,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "34d4c13b",
    "metadata": {},
    "outputs": [
@@ -838,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "2bef7b00",
    "metadata": {},
    "outputs": [
@@ -865,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "32bc98b9",
    "metadata": {},
    "outputs": [
@@ -932,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "c100625a",
    "metadata": {},
    "outputs": [
@@ -1005,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "ab22ea5c",
    "metadata": {},
    "outputs": [
@@ -1013,7 +998,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/users/oaa9/arkouda-2024.04.19/arkouda/alignment.py:159: UserWarning: Duplicate terms present in search space. Only first instance of each query term            will be reported.\n",
+      "/scratch/users/oaa9/arkouda/arkouda/alignment.py:248: UserWarning: Duplicate terms present in search space. Only first instance of each query term will be reported. To return all occurrences, set all_occurrences=True.\n",
       "  warn(\n"
      ]
     },
@@ -1040,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "3affcb7e",
    "metadata": {},
    "outputs": [
@@ -1049,13 +1034,13 @@
      "output_type": "stream",
      "text": [
       "The largest component is labeled: 0\n",
-      "The smallest component is labeled: 571\n"
+      "The smallest component is labeled: 6975\n"
      ]
     }
    ],
    "source": [
     "g = ak.GroupBy(cc)\n",
-    "keys, count = g.count()\n",
+    "keys, count = g.size()\n",
     "label_of_largest_component = ak.argmax(count)\n",
     "label_of_smallest_component = ak.argmin(count)\n",
     "print(f\"The largest component is labeled: {keys[label_of_largest_component]}\")\n",
@@ -1077,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "ef580d45",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "922ec7c5",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "453d1389",
    "metadata": {},
    "outputs": [
@@ -1165,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "d0cf789b",
    "metadata": {},
    "outputs": [
@@ -1192,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "f9453589",
    "metadata": {},
    "outputs": [
@@ -1219,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "c6bfe6fe",
    "metadata": {},
    "outputs": [
@@ -1262,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "4aa9be7b",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "7fd4d820",
    "metadata": {},
    "outputs": [],
@@ -1303,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "999dfc01",
    "metadata": {},
    "outputs": [],
@@ -1316,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "36d90c88",
    "metadata": {},
    "outputs": [],
@@ -1326,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "db263405",
    "metadata": {},
    "outputs": [
@@ -1354,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "id": "60bb8a86",
    "metadata": {},
    "outputs": [
