--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n115\", 5555)"
+    "ak.connect(\"n32\", 5555)"
    ]
   },
   {
@@ -831,8 +831,8 @@
     "network_df['type'] = 'T1'\n",
     "\n",
     "# Print the pandas DataFrame (optional, just to verify)\n",
-    "#print(network_df)\n",
-    "#print(network_df.head())\n",
+    "print(network_df)\n",
+    "print(network_df.head())\n",
     "\n",
     "\n",
     "\n",
