--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +25,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n32\", 5555)"
+    "ak.connect(\"n52\", 5555)"
    ]
   },
   {
@@ -779,10 +787,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "21750aa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cluster 797 is the biggest cluster with 263 nodes\n",
+      "        src   dst type\n",
+      "0         0   391   T1\n",
+      "1         0  1945   T1\n",
+      "2         0  1698   T1\n",
+      "3         2   411   T1\n",
+      "4         2  1873   T1\n",
+      "...     ...   ...  ...\n",
+      "10424  2026  1186   T1\n",
+      "10425  2026   465   T1\n",
+      "10426  2026  1690   T1\n",
+      "10427  2026  1905   T1\n",
+      "10428  2026    75   T1\n",
+      "\n",
+      "[10429 rows x 3 columns]\n",
+      "   src   dst type\n",
+      "0    0   391   T1\n",
+      "1    0  1945   T1\n",
+      "2    0  1698   T1\n",
+      "3    2   411   T1\n",
+      "4    2  1873   T1\n",
+      "Graph Density: 0.012719378483529081\n",
+      "Number of unique nodes: 906\n",
+      "Number of edges: 10429\n",
+      "Running Arachne\n",
+      "<class 'arachne.propgraphclass.PropGraph'>\n",
+      "<class 'str'>\n",
+      "clusters =  []\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
