--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
    ],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
-    "ak.connect(\"n52\", 5555)"
+    "ak.connect(\"n32\", 5555)"
    ]
   },
   {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "4b6a0f2f",
    "metadata": {},
    "outputs": [],
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "21750aa7",
    "metadata": {},
    "outputs": [
@@ -796,33 +796,8 @@
      "output_type": "stream",
      "text": [
       "Cluster 797 is the biggest cluster with 263 nodes\n",
-      "        src   dst type\n",
-      "0         0   391   T1\n",
-      "1         0  1945   T1\n",
-      "2         0  1698   T1\n",
-      "3         2   411   T1\n",
-      "4         2  1873   T1\n",
-      "...     ...   ...  ...\n",
-      "10424  2026  1186   T1\n",
-      "10425  2026   465   T1\n",
-      "10426  2026  1690   T1\n",
-      "10427  2026  1905   T1\n",
-      "10428  2026    75   T1\n",
-      "\n",
-      "[10429 rows x 3 columns]\n",
-      "   src   dst type\n",
-      "0    0   391   T1\n",
-      "1    0  1945   T1\n",
-      "2    0  1698   T1\n",
-      "3    2   411   T1\n",
-      "4    2  1873   T1\n",
-      "Graph Density: 0.012719378483529081\n",
-      "Number of unique nodes: 906\n",
-      "Number of edges: 10429\n",
       "Running Arachne\n",
-      "<class 'arachne.propgraphclass.PropGraph'>\n",
-      "<class 'str'>\n",
-      "clusters =  []\n"
+      "clusters =  [103 24 108 27 932 55 56 27 173 110 658 33 338 194 535 23 2028 90 824 24 1319 30 1263 74 60 27 1386 63 528 24]\n"
      ]
     }
    ],
@@ -873,63 +848,12 @@
     "network_df = pd.read_csv(\"/scratch/users/md724/DataSets/wcc/test_network.tsv\", sep=\"\\t\", header=None, names=[\"src\", \"dst\"])\n",
     "network_df['type'] = 'T1'\n",
     "\n",
-    "# Print the pandas DataFrame (optional, just to verify)\n",
-    "print(network_df)\n",
-    "print(network_df.head())\n",
+    "# Create an Arachne Graph.\n",
+    "ar_network_graph = ar.Graph()\n",
+    "ar_network_graph.add_edges_from(ak.array(network_df[\"src\"]), ak.array(network_df[\"dst\"]))\n",
     "\n",
-    "\n",
-    "\n",
-    "# %%\n",
-    "# Concatenate 'src' and 'dst' columns and find unique elements for nodes\n",
-    "unique_nodes = pd.concat([network_df['src'], network_df['dst']]).unique()\n",
-    "\n",
-    "# Number of unique nodes\n",
-    "num_unique_nodes = len(unique_nodes)\n",
-    "#num_unique_nodes\n",
-    "\n",
-    "# %%\n",
-    "# Number of edges is the length of the DataFrame\n",
-    "num_edges = len(network_df)\n",
-    "\n",
-    "# Calculate graph density\n",
-    "d = num_edges / (num_unique_nodes * (num_unique_nodes - 1))\n",
-    "print(f\"Graph Density: {d}\")\n",
-    "\n",
-    "print(f\"Number of unique nodes: {num_unique_nodes}\")\n",
-    "print(f\"Number of edges: {num_edges}\")\n",
-    "\n",
-    "\n",
-    "# %%\n",
-    "\n",
-    "# Convert the pandas DataFrame to an Arkouda DataFrame\n",
-    "ak_network_df = ak.DataFrame(network_df)\n",
-    "ak_network_df\n",
-    "\n",
-    "# %%\n",
-    "# Create an Arachne PropGraph and load the edge attributes\n",
-    "ar_network_graph = ar.PropGraph()\n",
-    "ar_network_graph.load_edge_attributes(ak_network_df, source_column=\"src\", destination_column=\"dst\", relationship_columns=[\"type\"])\n",
-    "\n",
-    "\n",
-    "# %%\n",
-    "# Get all nodes and create node attributes\n",
-    "all_nodes = ak.concatenate([ak_network_df['src'], ak_network_df['dst']])\n",
-    "unique_nodes = ak.unique(all_nodes)\n",
-    "lbls = ak.array([\"1\"] * unique_nodes.size)\n",
-    "network_node_df = ak.DataFrame({\"nodes\": unique_nodes, \"lbls\": lbls})\n",
-    "network_node_df\n",
-    "\n",
-    "\n",
-    "# %%\n",
-    "\n",
-    "ar_network_graph.load_node_attributes(network_node_df, node_column=\"nodes\", label_columns=[\"lbls\"])\n",
-    "ar_network_graph\n",
-    "\n",
-    "# %%\n",
-    "print(\"Running Arachne\")\n",
     "filePath = \"/scratch/users/md724/DataSets/wcc/clustering.tsv\"\n",
-    "print(type(ar_network_graph))  # Check if it's PropGraph\n",
-    "print(type(filePath)) \n",
+    "print(\"Running Arachne\") \n",
     "clusters = ar.well_connected_components(ar_network_graph,filePath)\n",
     "\n",
     "print(\"clusters = \", clusters)"
