use two-core decomposition

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -792,7 +792,7 @@
     "# Execute wcc with the absolute path to the generate and the create network file.\n",
     "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
     "clusters = ar.well_connected_components(ar_network_graph, filePath)\n",
-    "print(\"Number of clusters generated = \", clusters.size / 3)"
+    "print(\"Number of clusters processed = \", clusters.size / 3)"
    ]
   }
  ],
