fixed work stack

--- a/arachne/arachne_sample.ipynb
+++ b/arachne/arachne_sample.ipynb
@@ -11,25 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "id": "f651e065",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -41,21 +26,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "671cb378",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# NOTE: Make sure to change the server name to whatever is applicable in your environment. If running locally, then use only ak.connect().\n",
     "ak.connect(\"n32\", 5555)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b3dd41e",
+   "metadata": {},
+   "source": [
+    "### **Well-Connected Components**\n",
+    "\n",
+    "This implementation performs steps to ensure that every cluster/community from a given graph and clustering inputs are well-connected. Output files are automatically written to `arkouda-njit/arachne/output/`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86b36041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"./data/wcc/test_network.tsv\"))\n",
+    "\n",
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"./data/wcc/clustering.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath)\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbf9e55d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an Arachne graph from a test network file.\n",
+    "ar_network_graph = ar.read_tsv_file(os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/wiki_topcats_cleaned.tsv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "467b4a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execute wcc with the absolute path to the generate and the create network file.\n",
+    "filePath = os.path.abspath(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\")\n",
+    "clusters = ar.well_connected_components(ar_network_graph, filePath)\n",
+    "print(\"Number of clusters processed = \", clusters.size)"
    ]
   },
   {
@@ -790,83 +817,6 @@
    "source": [
     "di = ar.diameter(G)\n",
     "print(f\"The diameter of karate is {di}\") "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ee7ff40d",
-   "metadata": {},
-   "source": [
-    "### **Well-Connected Components**\n",
-    "\n",
-    "This implementation performs steps to ensure that every cluster/community from a given ggraph and clustering inputs are well-connected. Output files are automatically written to `arkouda-njit/arachne/output/`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "21750aa7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Graph has 1791489 nodes and 25444207 edges.\n",
-      "Running Arachne...\n",
-      "Cluster files written to:  /scratch/users/md724/DataSets/UIUC/wccOutPut\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "cluster_dict = {}\n",
-    "\n",
-    "\n",
-    "# Read the TSV file using pandas\n",
-    "network_df = pd.read_csv(\"/scratch/users/md724/DataSets/UIUC/wiki_topcats/wiki_topcats_cleaned.tsv\", sep=\"\\t\", header=None, names=[\"src\", \"dst\"])\n",
-    "network_df['type'] = 'T1'\n",
-    "\n",
-    "# Create an undirected graph from the data\n",
-    "G = nx.from_pandas_edgelist(network_df, source='src', target='dst', create_using=nx.Graph())\n",
-    "\n",
-    "# Print the number of nodes and edges in the graph\n",
-    "num_nodes = G.number_of_nodes()\n",
-    "num_edges = G.number_of_edges()\n",
-    "print(f\"Graph has {num_nodes} nodes and {num_edges} edges.\")\n",
-    "\n",
-    "\n",
-    "# Create an Arachne Graph.\n",
-    "ar_network_graph = ar.Graph()\n",
-    "ar_network_graph.add_edges_from(ak.array(network_df[\"src\"]), ak.array(network_df[\"dst\"]))\n",
-    "\n",
-    "filePath = \"/scratch/users/md724/DataSets/UIUC/wiki_topcats/S2_wiki_topcats_leiden.0.001_i2_clustering.tsv\"\n",
-    "print(\"Running Arachne...\") \n",
-    "clusters = ar.well_connected_components(ar_network_graph, filePath, \"/scratch/users/md724/DataSets/UIUC/wccOutPut\")\n",
-    "# Function to extract information\n",
-    "def extract_cluster_info(cluster_array):\n",
-    "    cluster_info = []\n",
-    "    for i in range(0, len(cluster_array), 3):\n",
-    "        cluster_id = cluster_array[i]\n",
-    "        depth = cluster_array[i+1]\n",
-    "        members = cluster_array[i+2]\n",
-    "        cluster_info.append({\n",
-    "            'cluster_id': cluster_id,\n",
-    "            'depth': depth,\n",
-    "            'members': members\n",
-    "        })\n",
-    "    return cluster_info\n",
-    "\n",
-    "# Extract information\n",
-    "info = extract_cluster_info(clusters)\n",
-    "print(\"and it returned these WCC Clusters:\")\n",
-    "# Print the extracted information\n",
-    "for cluster in info:\n",
-    "    print(f\"Cluster ID: {cluster['cluster_id']}, Depth: {cluster['depth']}, Members: {cluster['members']}\")\n",
-    "#print(\"clusters = \", clusters)\n",
-    "#print(\"clusters.size = \", clusters.size)\n",
-    "ak.shutdown()"
    ]
   }
  ],
