a little faster than Min's code

--- a/arachne/benchmarks/wcc_simple_1.ipynb
+++ b/arachne/benchmarks/wcc_simple_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -23,13 +23,13 @@
     "import pandas as pd\n",
     "\n",
     "# Connect to Arkouda server\n",
-    "ak.connect(\"n32\", 5555)\n",
+    "ak.connect(\"n117\", 5555)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,8 +78,7 @@
      "output_type": "stream",
      "text": [
       "Cluster files written to:  /scratch/users/md724/DataSets/UIUC/wccOutPut\n",
-      "and it returned these WCC Clusters:\n",
-      "Cluster ID: 0, Depth: 0, Members: 0\n"
+      "and it returned these WCC Clusters:\n"
      ]
     }
    ],
@@ -105,7 +104,7 @@
     "# Print the extracted information\n",
     "for cluster in info:\n",
     "    print(f\"Cluster ID: {cluster['cluster_id']}, Depth: {cluster['depth']}, Members: {cluster['members']}\")\n",
-    "#print(\"clusters = \", clusters)\n",
+    "print(\"clusters = \", clusters)\n",
     "#print(\"clusters.size = \", clusters.size)\n",
     "ak.shutdown()"
    ]
